debugging-cka-pasts/ingress-svc/google_cloud_platform/ingress-rule-03.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
  rules:
  - host: "www.web01.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: "www.web02.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: nginx-hello
            port:
              number: 80
  - host: "www.web03.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
           service:
              name: nginx-deploy
              port:
                number: 80
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     kubernetes.io/ingress.class: "gce"
#     kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: "/*"
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: nginx-service
#             port:
#               number: 80
#       - path: "/api"
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: nginx-hello
#             port:
#               number: 80
      #  - path: "/java"
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: nginx-deploy
      #       port:
      #         number: 80
